# edith

./: .gitignore  CMakeLists.txt  README.md  main.c
display/: CMakeLists.txt  display.c  display.h
editor/: CMakeLists.txt  buffer.c  buffer.h  editor.c  editor.h  gap_buffer.c  gap_buffer.h
